0.9.0: (Future)
Features:
 - e-Reader card scanning
 - Add WebP and APNG recording
 - Add mute option in homebrew ports
 - Support for unlicensed Pokemon Jade/Diamond Game Boy mapper
 - Support for unlicensed BBD Game Boy mapper
 - Support for unlicensed Hitek Game Boy mapper
 - Stack tracing tools in ARM debugger (by ahigerd)
 - Command scripts for CLI debugger (by ahigerd)
Emulation fixes:
 - ARM: Fix ALU reading PC after shifting
 - ARM: Fix STR storing PC after address calculation
 - GB: Partially fix timing for skipped BIOS
 - GB Audio: Fix initial sweep state
 - GB Audio: Fix serializing sweep time
 - GB Audio: Fix deserializing audio channels 2 and 3
 - GB MBC: Fix MBC1 mode changing behavior
 - GB Video: Fix state after skipping BIOS (fixes mgba.io/i/1715 and mgba.io/i/1716)
 - GBA: Fix timing advancing too quickly in rare cases
 - GBA Audio: Fix deserializing SOUNDCNT_L
 - GBA BIOS: Implement dummy sound driver calls
 - GBA BIOS: Improve HLE BIOS timing
 - GBA BIOS: Fix reloading video registers after reset (fixes mgba.io/i/1808)
 - GBA BIOS: Make HLE BIOS calls interruptable (fixes mgba.io/i/1711 and mgba.io/i/1823)
 - GBA DMA: Linger last DMA on bus (fixes mgba.io/i/301 and mgba.io/i/1320)
 - GBA Hardware: Fix GB Player detection on big endian platforms
 - GBA Memory: Improve gamepak prefetch timing
 - GBA Memory: Stall on VRAM access in mode 2 (fixes mgba.io/i/190)
 - GBA SIO: Fix copying Normal mode transfer values
 - GBA SIO: Fix Normal mode being totally broken (fixes mgba.io/i/1800)
 - GBA SIO: Fix deseralizing SIO registers
 - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
 - GBA Video: Fix Hblank timing
 - GBA Video: Invalidate map cache when modifying BGCNT (fixes mgba.io/i/1846)
 - SM83: Emulate HALT bug
Other fixes:
 - 3DS: Redo video sync to be more precise
 - 3DS: Fix crash with libctru 2.0 when exiting
 - All: Improve export headers (fixes mgba.io/i/1738)
 - Core: Ensure ELF regions can be written before trying